--- a/chat/static/css/r_m.css
+++ b/chat/static/css/r_m.css
@@ -8,6 +8,10 @@
     background-color: #efefef;
 }
 
+.pageJeep{
+    text-align: center;
+}
+
 #bg{
     background: url("/static/img/bgc.jpg");
     height: 120px;
