--- a/market/templates/good_detail.html
+++ b/market/templates/good_detail.html
@@ -141,7 +141,7 @@
      {% for good in goods %}
     <a href="{% url 'good_detail' good.id %}">
     <div class = "goodlist" align="center">
-        <img src="/{{good.image}}" style="width: 200px;height: 230px;">
+        <img src="/static/文档.jpg" style="width: 160px;height: 230px;">
         {{good.name}}
     </div>
     </a>
