--- a/chat/templates/read_sb.html
+++ b/chat/templates/read_sb.html
@@ -4,6 +4,7 @@
 
 {% block title %}{{u.username}}的主页 - {% endblock %}
 
+
 {% block head %}
     <link rel="stylesheet" href="{% static 'css/r_m.css'%}"/>
 {% endblock %}
@@ -12,7 +13,7 @@
     <li><a href="{% url 'index' %}">主页</a></li>
     <li><a href="{% url 'market_index' %}">商城</a></li>
     <li class="selected"><a href="{% url 'chat_index' %}">社区</a></li>
-    <li><a href="{% url 'share_index' %}">共享文件</a></li>
+    <li><a href="{% url 'share_index' %}">资源共享</a></li>
 {% endblock %}
 
 
@@ -85,7 +86,7 @@
             {%endfor%}   
         </div>
         </div>
-       <div class="pageJeep">
+        <div class="pageJeep">
             <div class="embed">
                 <nav aria-label="...">
                 <ul class="pagination">
