--- a/static/css/chat.css
+++ b/static/css/chat.css
@@ -44,7 +44,7 @@ a:active {font-family:color:#11FF11;}*/
 
 #author{
     font-size:20px;
-    color: #E1E;
+    color: #DA70D6;
     font-weight: bold;
     clear:both;
 
@@ -53,7 +53,7 @@ a:active {font-family:color:#11FF11;}*/
 #essay{
     clear:both;
     font-size:25px;
-    color: #111;
+    color: #696969;
     font-weight: bold;
 }
 
